<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42193f"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_score_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_score_result"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/font_jakarta_regular"/>

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/img_trophy" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:text="Cella"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/font_jakarta_regular"/>

        <TextView
            android:id="@+id/tv_totalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text= "@string/text_total_score"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/font_jakarta_regular"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            app:cardBackgroundColor="#7d72ec"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:fontFamily="@font/font_jakarta_regular">

            <LinearLayout
                android:id="@+id/ll_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/btnFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/text_finish"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/font_jakarta_regular"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
